--- a/style.css
+++ b/style.css
@@ -53,3 +53,22 @@
   padding: 10px;
   font-size: 20px;
 }
+
+/* Styling the svg loader
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.loader {
+  z-index: 10;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /*width: 200%;
+  height: 200%;*/
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+.loader svg path,
+.loader svg rect {
+  fill: #136fd2;
+}
